2007-06-06  Nagappan A  <anagappan@novell.com>

	* ColumnReference.cs (Unify): Return object as it is, if object
	type is char. Fixes bug # 81625.

	* Numeric.cs (IsNumeric): Return false if object type is
	char. Fixes bug # 81625.

2007-02-23  Nagappan A  <anagappan@novell.com>

	* Comparison.cs (Compare): Extra space characters issue when using
	System.Data.DataTable.Select. Fixes bug # 79695.

2006-12-07  Nagappan A  <anagappan@novell.com>

	* Parser.jay (ColumnName): Fix Invalid DataColumn Expression, bug
	# 80169.

2006-06-15  Senganal T  <tsenganal@novell.com>

	* Expression.cs : 
		- EvalBoolean : throw EvaluateException unless overridden.
		- UnaryExpression.EvalBoolean : override EvalBoolean
	* Like.cs, In.cs, ColumnReference.cs : override EvalBoolean 

2006-06-09  Juraj Skripsky <js@hotfeet.ch>

	* Tokenizer.cs (ProcessEscapes): Inspect the next character, not the one
	after that.

2006-05-02  Senganal T  <tsenganal@novell.com>

	* Parser.jay : fix the rule for IsNull. Fixes bug #78254
	* Functions.cs : 
		- IsNullFunction.Eval : If expr evaluates to null or DBNull.Value, return the
		default expression value.

2006-03-27	Boris Kirzner <borisk@mainsoft.com>
	* Aggregation.cs: fix possible NullReferenceException.

2006-02-03  Senganal T  <tsenganal@novell.com>
	
	* ColumnReference.cs : 
		- GetReferencedRow () 
		- GetReferencedRows() : Verify the column before getting the values.
		 	Validate the ColumnReference even when the table has no rows.
	* Function.cs : Modified Eval()
		- A tmp fix to check for null. Expression.Eval needs to be modified all
		around to return DBNull.Value.

2006-01-18 Boris Kirzner <borisk@mainsoft.com>
	* ColumnReference.cs: added column and relation lazy evaluation 
	and caching.

2006-01-09 Senganal T <tsenganal@novell.com>
	* Aggregation.cs
	* Expression.cs
		- resolving a name clash in IExpression 

2006-01-06 Senganal T <tsenganal@novell.com>

	* Aggregation.cs
		- a correction to the previous check-in
