@@ -1,3 +1,8 @@
+2007-07-26  Nagappan A  <anagappan@novell.com>
+
+	* Comparison.cs (Compare): Should always parse the object of type
+	DateTime in InvariantCulture CultureInfo, Fixes Bug # 82109.
+
 2007-06-06  Nagappan A  <anagappan@novell.com>
 
 	* ColumnReference.cs (Unify): Return object as it is, if object
